# pymodeltime

./: LICENSE  README.md  __init__.py  environment.yml  pyproject.toml  requirements.txt  requirements_new.txt  setup.py
data/: data.csv  data_macro.csv  m750.csv  m_qdata.csv
examples/: Demand_Forecasting.ipynb  Forcasting_Canadian_GDP (1).ipynb  Forcasting_Canadian_GDP.ipynb  Multiple_regression.ipynb  Univariate_regression.ipynb  Univariate_regression2.ipynb
pymodeltime/: 4.2.0  AutoGluonTabularWrapper.py  H2OAutoMLWrapper.py  MLModelWrapper.py  ModelTimeAccuracy.py  ModelTimeCalibration.py  ModelTimeForecast.py  ModelTimeRefit.py  __init__.py  evaluation.py  plot_modeltime_forecast.py  plot_modeltime_forecast_2.py
pymodeltime.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
