[tool.poetry]
name = "pymodeltime"
version = "0.0.0.9000"
description = "The time series machine learning toolkit for Python."
authors = [
    "Shafiullah Qureshi <qureshi.shafiullah@gmail.com>", 
    "Matt Dancho <mdancho@business-science.io>"
]
maintainers = [
    "Shafiullah Qureshi <qureshi.shafiullah@gmail.com>", 
    "Matt Dancho <mdancho@business-science.io>", 
    "Plamen Rabadzhiyski <plamen@data-science-ai.com>"
]
include = ["data/*"]
license = "LICENSE"
readme = "README.md"
keywords = ["time series", "forecasting", "machine learning", "data science"]
repository = "https://github.com/business-science/pymodeltime"


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = ">=1.5.3"
# statsmodels = "*"
# scikit-learn = ">=0.23"
# xgboost = "*"
# prophet = "*"
# pmdarima = "*"
# mlforecast = "*"
# autogluon = "*"
# torch = ">=2.0.0"
# torchvision = "*"
# h2o = "*"
pytimetk = "^0.3.0"
scikit-learn = "^1.4.0"
xgboost = "^2.0.3"
statsmodels = "^0.14.1"
prophet = "^1.1.5"
mlforecast = "^0.11.6"
statsforecast = "^1.7.2"
pmdarima = "^2.0.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
pytest = "^7.4.2"

[tool.poetry.group.docs.dependencies]
quarto = "^0.1.0"
quartodoc = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
